# python-musicbrainzngs2

./: CONTRIBUTING.md  COPYING  README.rst  pyproject.toml  query.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
examples/: collection.py  find_disc.py  releasesearch.py
musicbrainzngs/: __init__.py  caa.py  compat.py  mbxml.py  musicbrainz.py  util.py
test/: _common.py  test_browse.py  test_caa.py  test_collection.py  test_getentity.py  test_mbxml.py  test_mbxml_artist.py  test_mbxml_collection.py  test_mbxml_discid.py  test_mbxml_event.py  test_mbxml_instrument.py  test_mbxml_label.py  test_mbxml_place.py  test_mbxml_recording.py  test_mbxml_release.py  test_mbxml_release_group.py  test_mbxml_search.py  test_mbxml_work.py  test_ratelimit.py  test_requests.py  test_search.py  test_submit.py
